Ensure score inputs fit on smaller screens

--- a/css/tennis-app.css
+++ b/css/tennis-app.css
@@ -348,7 +348,7 @@ body.standalone .contents {
 
 .bootbox-form.match .form-group.score span {
   display: inline-block;
-  width: 5%;
+  width: 6%;
 }
 
 .bootbox-form.match .form-group.score span.marker {
@@ -359,7 +359,7 @@ body.standalone .contents {
   display: inline-block;
   vertical-align: middle;
   margin-bottom: 0;
-  width: 20%;
+  width: 19%;
 }
 
 .bootbox-form.match .form-group.score input.pts {
